poke/testsuite/poke.pkl/struct-types-diag-8.pk
/* { dg-do compile } */

deftype Bar = struct { int i; long j; defun ja = void: {} };

defvar b = Bar @ 0#B;
b.jorl; /* { dg-error "" } */
